<resources>
    <string name="app_name">Pelayanan Warga</string> <!--(Bidol) "Peldi buat skripsi aja dah" | Mon, 10 Jan 9:39 PM -->

    <string name="tombol_sign_in">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Registrasi</string>

    <string name="content_header">Rukun Tetangga (RT) adalah lembaga kemasyarakatan yang dibentuk Pemerintah Kalurahan sebagai bagian wilayah administrasi kalurahan untuk memelihara dan melestarikan nilai-nilai kehidupan yang berdasarkan kegotongroyongan kekeluargaan, membantu meningkatkan kelancaran tugas pemerintah, pembangunan dan kemasyarakatan di desa/Kalurahan serta meningkatkan peran serta masyarakat dalam pembangunan.</string>
    <string name="subtitle">Dokumentasi Kegiatan RT (2021)</string>
    <string name="profile_info">Dokumen ini telah ditandatangani secara elektronik menggunakan sertifikat elektronik yang diterbitkan oleh Balai Sertifikasi Elektronik (BSrE), BSSN</string>

    <string name="profile_menu">Profile</string>

    <!-- Admin Menu -->
    <string name="menu_one">Surat Keterangan\nLayak Nikah</string>
    <string name="menu_two">Surat Keterangan\nUsaha (UMKM)</string>
    <string name="menu_three">Surat Pindah\nDomisili KTP</string>
    <string name="menu_four">Surat Pengantar\nKK Baru</string>
    <string name="menu_five">Surat Pengantar\nAkta Kelahiran</string>
    <string name="menu_six">Surat Pengantar\nAkta Kematian</string>

    <string name="menu_citizen_one">Kartu Keluarga\nTerdaftar</string>
    <string name="menu_citizen_two">Kartu Tanda Penduduk\nTerdaftar</string>

    <string name="form_list">Formulir Persetujuan</string>
    <string name="kk_list">Daftar Kartu Keluarga</string>

    <!-- Gender Menu -->
    <string name="gender_male">Laki-laki</string>
    <string name="gender_female">Perempuan</string>

    <string name="ag_islam">Islam</string>
    <string name="ag_kristen">Kristen</string>
    <string name="ag_katolik">Katolik</string>
    <string name="ag_hindu">Hindu</string>
    <string name="ag_buddha">Buddha</string>
    <string name="ag_konghucu">Konghucu</string>

    <string name="pd_sd">Sekolah Dasar</string>
    <string name="pd_smp">Sekolah Menengah Pertama</string>
    <string name="pd_sma">Sekolah Menengah Atas</string>
    <string name="pd_diploma">Diploma</string>
    <string name="pd_strata_satu">Strata-1</string>

    <string name="k_pegawai_swasta">Pegawai Swasta</string>
    <string name="k_pegawai_negeri">Pegawai Negeri</string>
    <string name="k_petani">Petani</string>
    <string name="k_pelajar">Pelajar/Mahasiswa</string>

    <string name="k_wni">WNI</string>
    <string name="k_wna">Non WNI</string>
    <string name="s_kawin">Kawin</string>
    <string name="s_belum_kawin">Belum Kawin</string>


    <string name="gender">-- Jenis Kelamin --</string>
    <string name="bulan">-- Bulan --</string>
    <string name="tahun">-- Tahun --</string>
    <string name="agama">-- Agama --</string>
    <string name="pd">-- Pendidikan --</string>
    <string name="kerja">-- Pekerjaan --</string>
    <string name="status">-- Status Perkawinan --</string>
    <string name="kewarganegaraan">-- Kewarganegaraan --</string>
</resources>
