<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeUserFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/ic_bg_home_by_stwn"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/signOutButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:padding="10dp"
        android:visibility="invisible"
        android:src="@mipmap/ic_sign_out"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutSpace"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:visibility="invisible"
        app:layout_constraintHeight_percent="0.21"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintBottom_toTopOf="@id/tvKKNumber"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvProfile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="50dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="47.5dp">

                    <ImageView
                        android:id="@+id/imageProfile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_diamond" />

                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvKKNumber"
            style="@style/MulishWhiteMediumStyle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="No.Kartu Keluarga:\n012345678910"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent=".5"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvKKKep"
            style="@style/MulishWhiteMediumStyle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Kepala Keluarga:\nCristiano Ronaldo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent=".5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        android:paddingTop="25dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintHeight_percent=".6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutSpace">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvInfo1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clickable="false"
            app:cardCornerRadius="10dp"
            app:cardMaxElevation="10dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintDimensionRatio="1:.8"
            app:layout_constraintHeight_percent=".28"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/cvInfo2"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintInfo1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_blue_50"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageInfo1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:src="@mipmap/ic_menu_wedding"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHeight_percent=".35"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias=".15" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvInfoTitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/menu_one"
                    android:textColor="@color/dark_blue"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvInfo2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clickable="false"
            app:cardCornerRadius="10dp"
            app:cardMaxElevation="10dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintDimensionRatio="1:.8"
            app:layout_constraintHeight_percent=".28"
            app:layout_constraintLeft_toRightOf="@id/cvInfo1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintInfo2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageInfo2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:src="@mipmap/ic_menu_umkm"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHeight_percent=".35"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias=".15" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvInfoTitle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/menu_two"
                    android:textColor="@color/dark_blue"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvInfo3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:clickable="false"
            app:cardCornerRadius="10dp"
            app:cardMaxElevation="10dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintDimensionRatio="1:.8"
            app:layout_constraintHeight_percent=".28"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/cvInfo4"
            app:layout_constraintTop_toBottomOf="@id/cvInfo1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintInfo3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageInfo3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:src="@mipmap/ic_menu_move"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHeight_percent=".35"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias=".15" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvInfoTitle3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/menu_three"
                    android:textColor="@color/dark_blue"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvInfo4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:clickable="false"
            app:cardCornerRadius="10dp"
            app:cardMaxElevation="10dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintDimensionRatio="1:.8"
            app:layout_constraintHeight_percent=".28"
            app:layout_constraintLeft_toRightOf="@id/cvInfo3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvInfo2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintInfo4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_blue_50"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageInfo4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:src="@mipmap/ic_menu_kk"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHeight_percent=".35"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias=".15" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvInfoTitle4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/menu_four"
                    android:textColor="@color/dark_blue"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvInfo5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:clickable="false"
            app:cardCornerRadius="10dp"
            app:cardMaxElevation="10dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintDimensionRatio="1:.8"
            app:layout_constraintHeight_percent=".28"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/cvInfo6"
            app:layout_constraintTop_toBottomOf="@id/cvInfo3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintInfo5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_blue_50"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageInfo5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:src="@mipmap/ic_menu_akta"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHeight_percent=".35"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias=".15" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvInfoTitle5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/menu_five"
                    android:textColor="@color/dark_blue"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvInfo6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:clickable="false"
            app:cardCornerRadius="10dp"
            app:cardMaxElevation="10dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintDimensionRatio="1:.8"
            app:layout_constraintHeight_percent=".28"
            app:layout_constraintLeft_toRightOf="@id/cvInfo5"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvInfo4">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintInfo6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageInfo6"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:src="@mipmap/ic_menu_cemetery"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHeight_percent=".35"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias=".15" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvInfoTitle6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/menu_six"
                    android:textColor="@color/dark_blue"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBanner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:visibility="invisible"
        app:cardCornerRadius="10dp"
        app:layout_constraintHeight_percent=".18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintContainer"
        app:layout_constraintWidth_percent=".65">

        <ImageSwitcher
            android:id="@+id/imageSwitcher"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_blue_max"
            android:visibility="visible" />

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_50"
        android:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>